@@ -69,7 +69,7 @@ tasks.register('configureIdeCheckstyle') {
 }
 
 // Applying this stuff, particularly the idea-ext plugin, has a cost so avoid it unless we're running in the IDE
-if (providers.systemProperty('idea.active').forUseAtConfigurationTime().getOrNull() == 'true') {
+if (providers.systemProperty('idea.active').getOrNull() == 'true') {
   project.apply(plugin: org.jetbrains.gradle.ext.IdeaExtPlugin)
 
   tasks.register('configureIdeaGradleJvm') {
@@ -88,7 +88,9 @@ if (providers.systemProperty('idea.active').forUseAtConfigurationTime().getOrNul
   tasks.register('buildDependencyArtifacts') {
     group = 'ide'
     description = 'Builds artifacts needed as dependency for IDE modules'
-    dependsOn ':client:rest-high-level:shadowJar', ':plugins:repository-hdfs:hadoop-client-api:shadowJar', ':modules:repository-azure:azure-storage-blob:shadowJar'
+    dependsOn ':client:rest-high-level:shadowJar',
+      ':plugins:repository-hdfs:hadoop-client-api:shadowJar',
+      ':libs:elasticsearch-x-content:generateProviderImpl'
   }
 
   idea {
@@ -120,6 +122,7 @@ if (providers.systemProperty('idea.active').forUseAtConfigurationTime().getOrNul
           defaults(JUnit) {
             vmParameters = [
               '-ea',
+              '-Djava.security.manager=allow',
               '-Djava.locale.providers=SPI,COMPAT',
               // TODO: only open these for mockito when it is modularized
               '--add-opens=java.base/java.security.cert=ALL-UNNAMED',
